--- a/public/patterns/02-organisms-footer-footer/02-organisms-footer-footer.rendered.html
+++ b/public/patterns/02-organisms-footer-footer/02-organisms-footer-footer.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1500250730980" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1500250730980" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1500426748206" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1500426748206" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1500250730980" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1500250730980" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1500426748206" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1500426748206" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -94,15 +94,9 @@
         "lineagePattern": "atoms-paragraph-footer",
         "lineagePath": "../../patterns/00-atoms-typography-paragraph-footer/00-atoms-typography-paragraph-footer.rendered.html"
       }],
-      "patternLineageRExists": true,
-      "patternLineagesR": [{
-        "lineagePattern": "templates-homepage",
-        "lineagePath": "../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"
-      }],
-      "lineageR": [{
-        "lineagePattern": "templates-homepage",
-        "lineagePath": "../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"
-      }],
+      "patternLineageRExists": false,
+      "patternLineagesR": [],
+      "lineageR": [],
       "patternLineageEExists": true,
       "patternDesc": "<p>Description</p>\n",
       "patternBreadcrumb": {
@@ -151,10 +145,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1500250730980">
+  <script id="pl-js-polyfill-insert-1500426748206">
     (function() {
       if (self != top) {
-        var cb = '1500250730980';
+        var cb = '1500426748206';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -164,10 +158,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1500250730980">
+  <script id="pl-js-insert-1500426748206">
     (function() {
       if (self != top) {
-        var cb = '1500250730980';
+        var cb = '1500426748206';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
