--- a/public/patterns/02-organisms-primary-nav/index.html
+++ b/public/patterns/02-organisms-primary-nav/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     
-    <link rel="stylesheet" href="../../css/style.css?1500250730980" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1500250730980" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1500426748206" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1500426748206" media="all" />
     
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -16,8 +16,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1500250730980" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1500250730980" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1500426748206" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1500426748206" media="all" />
 
     <!-- End Pattern Lab -->
   
@@ -70,7 +70,7 @@
 
   </div>
   <script type="text/json" id="sg-pattern-data-organisms-primary-nav" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":true,"patternLineages":[{"lineagePattern":"atoms-primary-nav-link","lineagePath":"../../patterns/00-atoms-links-primary-nav-link/00-atoms-links-primary-nav-link.rendered.html"},{"lineagePattern":"atoms-logo","lineagePath":"../../patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html"}],"lineage":[{"lineagePattern":"atoms-primary-nav-link","lineagePath":"../../patterns/00-atoms-links-primary-nav-link/00-atoms-links-primary-nav-link.rendered.html"},{"lineagePattern":"atoms-logo","lineagePath":"../../patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html"}],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"templates-homepage","lineagePath":"../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"}],"lineageR":[{"lineagePattern":"templates-homepage","lineagePath":"../../patterns/03-templates-homepage-homepage/03-templates-homepage-homepage.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"organisms","patternSubtype":"primary-nav"},"patternExtension":"mustache","patternName":"Primary Nav","patternPartial":"organisms-primary-nav","patternState":"","patternEngineName":"mustache","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":true,"patternLineages":[{"lineagePattern":"atoms-primary-nav-link","lineagePath":"../../patterns/00-atoms-links-primary-nav-link/00-atoms-links-primary-nav-link.rendered.html"},{"lineagePattern":"atoms-logo","lineagePath":"../../patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html"}],"lineage":[{"lineagePattern":"atoms-primary-nav-link","lineagePath":"../../patterns/00-atoms-links-primary-nav-link/00-atoms-links-primary-nav-link.rendered.html"},{"lineagePattern":"atoms-logo","lineagePath":"../../patterns/00-atoms-logo-logo/00-atoms-logo-logo.rendered.html"}],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":true,"patternDesc":"<p>Description</p>\n","patternBreadcrumb":{"patternType":"organisms","patternSubtype":"primary-nav"},"patternExtension":"mustache","patternName":"Primary Nav","patternPartial":"organisms-primary-nav","patternState":"","patternEngineName":"mustache","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
   </div> <!--end #sg-patterns-->
@@ -115,10 +115,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1500250730980">
+<script id="pl-js-polyfill-insert-1500426748206">
   (function() {
     if (self != top) {
-      var cb = '1500250730980';
+      var cb = '1500426748206';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -128,10 +128,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1500250730980">
+<script id="pl-js-insert-1500426748206">
   (function() {
     if (self != top) {
-      var cb = '1500250730980';
+      var cb = '1500426748206';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
