--- a/public/patterns/00-atoms-colors/index.html
+++ b/public/patterns/00-atoms-colors/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     
-    <link rel="stylesheet" href="../../css/style.css?1500514799375" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1500514799375" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1501964832091" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1501964832091" media="all" />
     
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -16,8 +16,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1500514799375" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1500514799375" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1501964832091" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1501964832091" media="all" />
 
     <!-- End Pattern Lab -->
   
@@ -53,17 +53,17 @@
   <div class="sg-pattern-example">
     <ul class="sg-colors">
 <li>
+	<span class="sg-swatch" style="background:#1a1a1a"></span>
+	<span class="sg-label">
+		$color-darker <br />
+		#1a1a1a
+	</span>
+</li>
+<li>
 	<span class="sg-swatch" style="background:#282a2d"></span>
 	<span class="sg-label">
 		$color-dark <br />
 		#282a2d
-	</span>
-</li>
-<li>
-	<span class="sg-swatch" style="background:#153659"></span>
-	<span class="sg-label">
-		$color-medium <br />
-		#153659
 	</span>
 </li>
 <li>
@@ -150,10 +150,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1500514799375">
+<script id="pl-js-polyfill-insert-1501964832091">
   (function() {
     if (self != top) {
-      var cb = '1500514799375';
+      var cb = '1501964832091';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -163,10 +163,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1500514799375">
+<script id="pl-js-insert-1501964832091">
   (function() {
     if (self != top) {
-      var cb = '1500514799375';
+      var cb = '1501964832091';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
