--- a/public/patterns/01-molecules-copy-block-copy-block/01-molecules-copy-block-copy-block.rendered.html
+++ b/public/patterns/01-molecules-copy-block-copy-block/01-molecules-copy-block-copy-block.rendered.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1500514799375" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1500514799375" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1501964832091" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1501964832091" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -17,8 +17,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1500514799375" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1500514799375" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1501964832091" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1501964832091" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -59,12 +59,12 @@
       "patternLineageEExists": true,
       "patternDesc": "<p>Description</p>\n",
       "patternBreadcrumb": {
-        "patternType": "organisms",
+        "patternType": "molecules",
         "patternSubtype": "copy-block"
       },
       "patternExtension": "mustache",
       "patternName": "Copy Block",
-      "patternPartial": "organisms-copy-block",
+      "patternPartial": "molecules-copy-block",
       "patternState": "",
       "patternEngineName": "mustache",
       "extraOutput": {}
@@ -104,10 +104,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1500514799375">
+  <script id="pl-js-polyfill-insert-1501964832091">
     (function() {
       if (self != top) {
-        var cb = '1500514799375';
+        var cb = '1501964832091';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -117,10 +117,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1500514799375">
+  <script id="pl-js-insert-1501964832091">
     (function() {
       if (self != top) {
-        var cb = '1500514799375';
+        var cb = '1501964832091';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
